webapp-deployment.yml
apiVersion: app/v1
kind: Deployment
metadata: 
  name: webapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      tag: webapp
  template:
    metadate:
      labels:
        tag: webapp
    spec:
      containers:
        - name: webapp
          image: vchraf/webapp:1
          ports:
            -containerPort: 9772
