webapp-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  labels:
    tag: web
spec:
  containers:
    - name: webapp
      image: vchraf/webapp:1
      ports:
        - containerPort: 9772
