webapp-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-clusterip
spec:
  type: ClusterIP
  selector:
    tag: webapp
  ports:
    - port: 9772
      targetPort: 9772
