webapp-config.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: webapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      tag: webapp
  template:
    metadata:
      labels:
        tag: webapp
    spec:
      containers:
        - name: webapp
          image: vchraf/webapp:4
          ports:
            - containerPort: 9772
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: webapp-clusterip
# spec:
#   type: ClusterIP
#   selector:
#     tag: webapp
#   ports:
#     - port: 9772
#       targetPort: 9772
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-lb
spec:
  selector:
    tag: web
  ports:
    - port: 9772
      targetPort: 9772
  type: LoadBalancer
