webapp-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-lb
spec:
  selector:
    tag: web
  ports:
    - port: 9772
      targetPort: 9772
  type: LoadBalancer


# apiVersion: v1
# kind: Service
# metadata:
#   name: webapp-nport
# spec:
#   type: NodePort
#   ports:
#     - port: 9777
#       targetPort: 9772
#       nodePort: 31515
#   selector:
#     tag: web
