ingress_config.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
    # UPDATE THIS LINE ABOVE
spec:
  rules:
    - http:
        paths:
          - path: /predict
            pathType: Prefix
            backend:
              serviceName: webapp-clusterip
              servicePort: 9772
          # - path: /api/?(.*)
          #   # UPDATE THIS LINE ABOVE
          #   backend:
          #     serviceName: server-cluster-ip-service
          #     servicePort: 5000
